--- a/Estruturas Web  Estilizações/index.html
+++ b/Estruturas Web  Estilizações/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hospedagens.com</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -22,8 +23,6 @@
         </div>
       </header>
       
-      
-
     <section class="hero">
       <div class="container">
         <div class="hero-text">
@@ -33,15 +32,11 @@
             local ideal, e realizar a viagem dos seus sonhos.
           </p>
           <div class="search-box">
-            <input
-              type="text"
-              placeholder="Qual o local desejado?"
-              id="local"
-            />
+            <input type="text" placeholder="Qual o local desejado?" id="local" />
             <input type="date" id="checkin" />
             <input type="date" id="checkout" />
             <button id="searchBtn">Procurar hotel</button>
-          </div>
+        </div>
         </div>
         <div class="hero-image">
           <img src="assets/mapa-brasil.png" alt="Mapa do Brasil" />
