--- a/Estruturas Web  Estilizações/index.html
+++ b/Estruturas Web  Estilizações/index.html
@@ -53,14 +53,16 @@
             Desfrute de um paraíso tropical em nossa pousada! Relaxar em nossas
             piscinas com vista para o mar.
           </p>
+          <button class="btn">Saiba Mais</button>
         </div>
         <div class="location-card">
           <img src="assets/Arraial do Cabo.jpg" alt="Arraial do Cabo" />
           <h3>Arraial do Cabo</h3>
           <p>
             Conecte-se com a natureza em Arraial do Cabo! Nossa pousada está
-            localizada próximo às praias.
+            localizada próximo às mais lindas praias.
           </p>
+          <button class="btn">Saiba Mais</button>
         </div>
         <div class="location-card">
           <img src="assets/Treze Tílias.jpg" alt="Treze Tílias" />
@@ -69,6 +71,7 @@
             Viva a experiência de um vilarejo europeu no Brasil! Nossas pousadas
             em Treze Tílias são perfeitas.
           </p>
+          <button class="btn">Saiba Mais</button>
         </div>
         <div class="location-card">
           <img src="assets/Ipanema.jpg" alt="Ipanema" />
@@ -77,38 +80,39 @@
             Explore a rica cultura e história de Ipanema! Nossas pousadas são o
             ponto de partida ideal para conhecer.
           </p>
+          <button class="btn">Saiba Mais</button>
         </div>
         <div class="location-card">
           <img src="assets/paraty.jpg" alt="Ipanema" />
           <h3>Paraty</h3>
           <p>
-            Explore a rica cultura e história de Ipanema! Nossas pousadas são o
-            ponto de partida ideal para conhecer.
+            Descubra o charme histórico de Paraty! Hospede-se em nossas pousadas e aproveite a atmosfera colonial da cidade.
           </p>
+          <button class="btn">Saiba Mais</button>
         </div>
         <div class="location-card">
           <img src="assets/buzios.jpg" alt="Ipanema" />
           <h3>Búzios</h3>
           <p>
-            Explore a rica cultura e história de Ipanema! Nossas pousadas são o
-            ponto de partida ideal para conhecer.
+            Viva o glamour de Búzios! Nossas pousadas são perfeitas para desfrutar das praias paradisíacas e da vida noturna vibrante.
           </p>
+          <button class="btn">Saiba Mais</button>
         </div>
         <div class="location-card">
           <img src="assets/saquarema.jpg" alt="Ipanema" />
           <h3>Saquarema</h3>
           <p>
-            Explore a rica cultura e história de Ipanema! Nossas pousadas são o
-            ponto de partida ideal para conhecer.
+            Aprecie as belas praias de Saquarema! Hospede-se conosco e explore o melhor do surfe e da natureza.
           </p>
+          <button class="btn">Saiba Mais</button>
         </div>
         <div class="location-card">
           <img src="assets/petropolis.jpg" alt="Ipanema" />
           <h3>Petrópolis</h3>
           <p>
-            Explore a rica cultura e história de Ipanema! Nossas pousadas são o
-            ponto de partida ideal para conhecer.
+            Mergulhe na história imperial de Petrópolis! Fique em nossas pousadas e aproveite o clima ameno e os museus históricos.
           </p>
+          <button class="btn">Saiba Mais</button>
         </div>
       </div>
     </section>
