--- a/Estruturas Web  Estilizações/index.html
+++ b/Estruturas Web  Estilizações/index.html
@@ -44,6 +44,11 @@
       </div>
     </section>
 
+    <!-- Seção de Parallax -->
+  <section class="parallax-section">
+    <h2>Conheça Nossas Pousadas</h2>
+  </section>
+
     <section class="locations">
       <div class="container">
         <div class="location-card">
@@ -144,6 +149,7 @@
     <div class="footer-site">
       <p>Hospedagens.com</p>
     </div>
+    <button id="backToTop" title="Voltar ao topo">↑</button>
 
     <script src="script.js"></script>
   </body>
